# nuta

./: .gitignore  CMakeLists.txt  README.md  main.cpp  shell.nix
include/: Barcode.hpp  ImageData.hpp
src/: Barcode.cpp  ImageData.cpp  main.cpp
